tests/baselines/reference/unicodeExtendedEscapesInRegularExpressions14(target=es5).errors.txt
unicodeExtendedEscapesInRegularExpressions14.ts(2,13): error TS1125: Hexadecimal digit expected.
unicodeExtendedEscapesInRegularExpressions14.ts(2,18): error TS1508: Unexpected '}'. Did you mean to escape it with backslash?
unicodeExtendedEscapesInRegularExpressions14.ts(2,21): error TS1501: This regular expression flag is only available when targeting 'es6' or later.


==== unicodeExtendedEscapesInRegularExpressions14.ts (3 errors) ====
    // Shouldn't work, negatives are not allowed.
    var x = /\u{-DDDD}/gu;
                
!!! error TS1125: Hexadecimal digit expected.
                     ~
!!! error TS1508: Unexpected '}'. Did you mean to escape it with backslash?
                        ~
!!! error TS1501: This regular expression flag is only available when targeting 'es6' or later.
    